syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/api/proto/v1/location";

message User {
  int32 id = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
